git as inherits item

--- a/.tln.conf
+++ b/.tln.conf
@@ -4,9 +4,9 @@ module.exports = {
     //tags.add('tag1').add(['tag1', 'tag2']);
   },
   options: (tln, options) => [],
-  dotenvs: (tln, dotenvs) => [/*'.env'*/],
-  depends: (tln) => [/*'java'*/],
-  inherits: (tln) => [/*'git'*/],
+  dotenvs: (tln, dotenvs) => [],
+  depends: (tln) => [],
+  inherits: (tln) => ['git'],
   variables: (tln, variables) => {
     /*
     variables
