--- a/.tln.conf
+++ b/.tln.conf
@@ -8,12 +8,9 @@ module.exports = {
   depends: (tln) => [],
   inherits: (tln) => ['git'],
   variables: (tln, variables) => {
-    /*
     variables
-      .set('TLN_GIT_USER', (tln, data) => 'user.name')
-      .append()
-      .prepend('PATH', (tln, data) => `${data.env['COMPONENT_ORIGIN']}${data.sep}bin`);
-    */
+      .set('TLN_GIT_ORIGIN', (tln, data) => `git@github.com:${data.env['TLN_GIT_USER']}/${data.env['COMPONENT_ID']}.git`)
+      .set('TLN_GIT_UPSTREAM', (tln, data) => `git@github.com:swe-course/${data.env['COMPONENT_ID']}.git` )
   },
   steps: (tln, steps) => [
     /*{",
