--- a/.tln.conf
+++ b/.tln.conf
@@ -1,10 +1,7 @@
-// tln: tln.logger[.con() | .trace() | etc]",
 module.exports = {
-  tags: (tln, tags) => {
-    //tags.add('tag1').add(['tag1', 'tag2']);
-  },
-  options: (tln, options) => [],
-  dotenvs: (tln, dotenvs) => [],
+  tags: (tln) => [],
+  options: (tln, options) => {},
+  dotenvs: (tln) => [],
   depends: (tln) => [],
   inherits: (tln) => ['git'],
   variables: (tln, variables) => {
@@ -12,13 +9,7 @@ module.exports = {
       .set('TLN_GIT_ORIGIN', (tln, data) => `git@github.com:${data.env['TLN_GIT_USER']}/${data.env['COMPONENT_ID']}.git`)
       .set('TLN_GIT_UPSTREAM', (tln, data) => `git@github.com:swe-course/${data.env['COMPONENT_ID']}.git` )
   },
-  steps: (tln, steps) => [
-    /*{",
-      id: 'hi',
-      desc: 'Say Hi from hi step',
-      script: (tln, script) => context.setScript(['echo Hi, home: ${COMPONENT_HOME}']),
-    }*/
-  ],
+  steps: (tln) => [],
   components: (tln, components) => [
     { id:'swec-lectures' },
     { id:'dbox' }
