--- a/.tln.conf
+++ b/.tln.conf
@@ -12,7 +12,6 @@ module.exports = {
   steps: (tln) => [],
   components: (tln, components) => [
     { id:'swec-lectures' },
-    { id:'swec-template' },
-    { id:'dbox' }
+    { id:'swec-template' }
   ]
 }
