--- a/.tln.conf
+++ b/.tln.conf
@@ -11,7 +11,8 @@ module.exports = {
   },
   steps: (tln) => [],
   components: (tln, components) => [
-    { id:'swec-lectures' },
-    { id:'swec-template' }
+    { id: 'swec-lectures' },
+    { id: 'swec-template' },
+    { id: 'swe-course.github.io'}
   ]
 }
