--- a/.tln.conf
+++ b/.tln.conf
@@ -1,16 +1,17 @@
+
 module.exports = {
-  tags: (tln) => [],
-  options: (tln, options) => {},
-  dotenvs: (tln) => [],
-  depends: (tln) => [],
-  inherits: (tln) => ['git'],
-  variables: (tln, variables) => {
-    variables
-      .set('TLN_GIT_ORIGIN', (tln, data) => `git@github.com:${data.env['TLN_GIT_USER']}/${data.env['COMPONENT_ID']}.git`)
-      .set('TLN_GIT_UPSTREAM', (tln, data) => `git@github.com:swe-course/${data.env['COMPONENT_ID']}.git` )
+  options: async (tln) => [],
+  dotenvs: async (tln) => [],
+  inherits: async (tln) => ['git'],
+  depends: async (tln) => [],
+  env: async (tln, env) => {
+    env.TLN_GIT_SSH_PREFIX = 'git@github.com:';
+    env.TLN_GIT_HTTPS_PREFIX = 'https://github.com/';
+    env.TLN_GIT_ORIGIN = `${env.TLN_GIT_USER}/${env.TLN_COMPONENT_ID}.git`;
+    env.TLN_GIT_UPSTREAM = `swe-course/${env.TLN_COMPONENT_ID}.git`;
   },
-  steps: (tln) => [],
-  components: (tln, components) => [
+  steps: async (tln) => [],
+  components: async (tln) => [
     { id: 'swec-lectures' },
     { id: 'swec-template' },
     { id: 'swe-course.github.io'}
