--- a/.tln.conf
+++ b/.tln.conf
@@ -14,6 +14,7 @@ module.exports = {
   components: async (tln) => [
     { id: 'swec-lectures' },
     { id: 'swec-template' },
-    { id: 'swe-course.github.io'}
+    { id: 'swe-course.github.io'},
+    { id: 'danit-ci' }
   ]
 }
