--- a/.tln.conf
+++ b/.tln.conf
@@ -15,6 +15,6 @@ module.exports = {
     { id: 'swec-lectures' },
     { id: 'swec-template' },
     { id: 'swe-course.github.io'},
-    { id: 'swe-portal }
+    { id: 'swe-portal' }
   ]
 }
