--- a/.tln.conf
+++ b/.tln.conf
@@ -13,7 +13,7 @@ module.exports = {
   steps: async (tln) => [],
   components: async (tln) => [
     { id: 'swec-lectures' },
-    { id: 'swec-template' },
+    { id: 'saas-skeleton' },
     { id: 'swe-course.github.io'},
     { id: 'swe-portal' }
   ]
